--- a/Dockerfile.predict
+++ b/Dockerfile.predict
@@ -3,17 +3,16 @@ FROM python:3.9-slim
 WORKDIR /app
 
 # Copy specific folders
-COPY data/ /app/data
 COPY models/ /app/models
 COPY config/ /app/config
 COPY src/ /app/src
-COPY main_train.py /app/main_train.py
+COPY main_api.py /app/main_api.py
 COPY requirements.txt /app/requirements.txt
 
 # Install dependencies
 RUN pip install -r requirements.txt
 
-# Create logs folders
+# Create logs folder
 RUN mkdir -p logs
 
 EXPOSE 8000
