--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,6 @@ Pipfile
 *.pyc
 
 # Removed so I can show what I did in the challenge
-# *.log
-# *.csv  # So we don't upload processed new files
-# *.json  # So we don't upload evaluation results
+*.log
+*.csv  # So we don't upload processed new files
+*.json  # So we don't upload evaluation results
